--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
-
 <h1>User index</h1>
 
 <ul>
 	<% @users_pos.each do |user_pos| %>
 	<li>
+		<p>Positive user</p>
 		<%= user_pos.name %>
-		<%= link_to "detail", "/users/#{current_user.id}" %>
+		<%= link_to "detail", "/users/#{user_pos.id}" %>
 	</li>
 	<% end %>
 </ul>
@@ -13,8 +13,9 @@
 <ul>
 	<% @users_neg.each do |user_neg| %>
 	<li>
+		<p>Negative user</p>
 		<%= user_neg.name %>
-		<%= link_to "detail", "/users/#{current_user.id}" %>
+		<%= link_to "detail", "/users/#{user_neg.id}" %>
 	</li>
 	<% end %>
 </ul>
