--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
 
 <% if logged_in? %>
 	<%= link_to "User index", users_path %>
-	<%= link_to "Post index", root_path %>
+	<%= link_to "Action index", posts_path %>
 	<%= link_to "Logout", logout_path, method: :delete %>
 <% else %>
 	<%= link_to "Signup", signup_path %>
