--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,25 @@
-<h1>You can modify your personal character</h1>
+<h1>User edit</h1>
 
 <%= form_with(model: @user, local: true) do |f| %>
-	
-	<%= f.label :name, "Name" %>
-	<%= f.text_field :name %>
-	
-	<%= f.label :email, "email" %>
-	<%= f.email_field :email %>
-	
-	<%= f.label :mind, "mind" %>
-	<%= f.select :mind, [["Positive", "positive"], ["Negative", "negative"]] %>
-	
-	<%= f.submit "edit" %>
+	<li>
+		<%= f.label :name, "Name" %>
+		<%= f.text_field :name %>
+	</li>
+	<li>
+		<%= f.label :email, "email" %>
+		<%= f.email_field :email %>
+	</li>
+	<li>
+		<%= f.label :mind, "mind" %>
+		<%= f.select :mind, [["Positive", "positive"], ["Negative", "negative"]] %>
+	</li>
+	<li>
+		<%= f.label :password, "Password" %>
+		<%= f.password_field :password%>
+	</li>
+	<li>
+		<%= f.submit "edit" %>
+	</li>
 
 <% end %>
 
