--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,18 @@
 <h1>User index</h1>
 
-<ul>
-	<% @users_pos.each do |user_pos| %>
 	<p>Positive user</p>
-	<li>
-		<%= user_pos.name %>
-		<%= link_to "detail", "/users/#{user_pos.id}" %>
-	</li>
+		
+	<% @users_pos.each do |user_pos| %>
+		<li>
+			<%= user_pos.name %>:
+			<%= link_to "detail", "/users/#{user_pos.id}" %>
+		</li>
 	<% end %>
-</ul>
 
-<ul>
-	<% @users_neg.each do |user_neg| %>
 	<p>Negative user</p>
-	<li>
-		<%= user_neg.name %>
-		<%= link_to "detail", "/users/#{user_neg.id}" %>
-	</li>
+	<% @users_neg.each do |user_neg| %>
+		<li>
+			<%= user_neg.name %>:
+			<%= link_to "detail", "/users/#{user_neg.id}" %>
+		</li>
 	<% end %>
-</ul>
