--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 	<li>
 		Post index:
 		<% @posts.each do |post| %>
-		<%= link_to post.content, post_path %>
+		<%= link_to post.content, post %>
 		<% end %>
 	</li>
 	
