--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,12 +11,12 @@
 	</li>
 	<li>
 		<p>User</p>
-		<%= @user.name%>
+		<%= @post.user.name%>
 	</li>
 
-	<% if @post.user_id == current_user.id %>
+	<% if @post.user.id == current_user.id %>
 	
-	<%= link_to "edit", edit_post_path %>
+	<%= link_to "edit", edit_post_path(@post) %>
 	
 	<% end %>
 </ul>
