--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,16 @@
-<h1>Post index</h1>
-
-<ul>
-	<%= link_to "Positive_Action × Positive_Mind", pospos_posts_path %>
-</ul>
-<ul>
-	<%= link_to "Positive_Action × Negative_Mind", posneg_posts_path %>
-</ul>
-<ul>
-	<%= link_to "Negative_Action × Positive_Mind", negpos_posts_path %>
-</ul>
-<ul>
-	<%= link_to "Negative_Action × Negative_Mind", negneg_posts_path %>
-</ul>
+<div class="text-center">
+  <h1>Post index</h1>
+</div>
+	<div class="text-cener">
+		
+		<div class="row">
+			<div class="col-sm-5 border-right border-bottom"><ul><%= link_to "Positive_Action × Positive_Mind", pospos_posts_path %></ul></div>
+			<div class="col-sm-5 border-left border-bottom"><ul><%= link_to "Positive_Action × Negative_Mind", posneg_posts_path %></ul></div>
+		</div>
+		<div class="row">
+			<div class="col-sm-5 border-top border-right"><ul><%= link_to "Negative_Action × Positive_Mind", negpos_posts_path %></ul></div>
+			<div class="col-sm-5 border-top border-left"><ul><%= link_to "Negative_Action × Negative_Mind", negneg_posts_path %></ul></div>
+		</div>
+	</div>
 
 <%= link_to "Active post now!",new_post_path %>
