--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,17 +1,24 @@
-<h1>Action Post</h1>
+<div class="text-center">
+	<h1>Action Post</h1>
+</div>
+<div class="row">
+	<div class="col-sm-6 offset-sm-3">
+		
+	
 
-<ul>
 	<%= form_with(model: @post, local:true) do |f| %>
 		<%= render "layouts/error_messages", model: f.object %>
-		<li>
+		<div class="form-group">
 			<%= f.label :status, "Status" %>
-			<%= f.select :status, [["Positive", "positive"], ["Negative", "negative"]] %>
-		</li>
-		<li>
+			<%= f.select :status, [["Positive", "positive"], ["Negative", "negative"]], class: "form-control" %>
+		</div>
+		<div class="form-group">
 			<%= f.label :content , "Action" %>
-			<%= f.text_field :content %>
-		</li>
-		<%= f.submit "Action Post!" %>
+			<%= f.text_field :content, class: "form-control" %>
+		</div>
+		<%= f.submit "Action Post!", class: "btn btn-primary btn-block" %>
 	<% end %>
 	
-</ul>
+
+	</div>
+</div>
