--- a/app/views/posts/posneg.html.erb
+++ b/app/views/posts/posneg.html.erb
@@ -1,11 +1,19 @@
 <h1>Positive_Action × Negative_Mind</h1>
-<ul>
-	
+
+<table class="table table-sm col-sm-5">
+	<th>Name</th>
+	<th>Post</th>
 	<% @pos_neg.each do |posneg| %>
-	<li>
-	<%= link_to posneg.content, post_path(posneg.id)%>
-	</li>
-		
+	<div class="row">
+		<tr>
+			<td>
+				<%= posneg.user.name %>
+			</td>
+			<td>
+				<%= link_to posneg.content, post_path(posneg.id)%>
+			</td>
+		</tr>
+	</div>
 	<% end %>
 
-</ul>
+</table>	
