--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,39 @@
-<h1>User index</h1>
-
-	<p>Positive user</p>
-		
-	<% @users_pos.each do |user_pos| %>
-		<li>
-			<%= user_pos.name %>:
-			<%= link_to "detail", "/users/#{user_pos.id}" %>
-		</li>
-	<% end %>
-
-	<p>Negative user</p>
-	<% @users_neg.each do |user_neg| %>
-		<li>
-			<%= user_neg.name %>:
-			<%= link_to "detail", "/users/#{user_neg.id}" %>
-		</li>
-	<% end %>
+<div class="text-left">
+  <h1>User index</h1>
+</div>
+<div class="row">
+　<div class="col-sm-3">
+		<h2>Positive user</h2>
+		<table class="table table-sm">
+		<% @users_pos.each do |user_pos| %>
+			<div class="row">
+				<tr>
+					<td class="text-center">
+						<%= user_pos.name %>:
+					</td>
+					<td>
+						<%= link_to "detail", "/users/#{user_pos.id}" %>
+					</td>
+				</tr>
+			</div>
+		<% end %>
+		</table>	
+　</div>
+	<div class="col-sm-3">
+		<h2>Negative user</h2>
+		<table class="table table-sm">
+		<% @users_neg.each do |user_neg| %>
+			<div class="row">
+				<tr>
+					<td class="text-center">
+						<%= user_neg.name %>:
+					</td>
+					<td>
+						<%= link_to "detail", "/users/#{user_neg.id}" %>
+					</td>
+				</tr>
+			</div>
+		<% end %>
+	 </table>
+	</div>
+</div>
