--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,32 @@
-<h1>Sign up</h1>
-	<ul>
-			
+<div class="text-center">
+	<h1>Sign up</h1>
+</div>
+<div class="row">
+	<div class="col-sm-6 offset-sm-3">
 		<%= form_with(model: @user, local:true) do |f| %>
 			<%= render "layouts/error_messages", model: f.object %>
-			<li>
+			<div class="form-group">
 				<%= f.label :name, "Name" %>
-				<%= f.text_field :name %>
-			</li>
-			<li>
+				<%= f.text_field :name, class: "form-control" %>
+			</div>
+			<div class="form-group">
 				<%= f.label :email, "Email" %>
-				<%= f.email_field :email%>
-			</li>
-			<li>
+				<%= f.email_field :email, class: "form-control" %>
+			</div>
+			<div class="form-group">
 				<%= f.label :mind, "Mind" %>
-				<%= f.select :mind, [["Positive", "positive"], ["Negative", "negative"]] %>
-			</li>
-			<li>
+				<%= f.select :mind, [["Positive", "positive"], ["Negative", "negative"]], class: "form-control" %>
+			</div>
+			<div class="form-group">
 				<%= f.label :password, "Password" %>
-				<%= f.password_field :password%>
-			</li>
-			<li>
+				<%= f.password_field :password, class: "form-control" %>
+			</div>
+			<div class="form-group">
 				<%= f.label :password_confirmation, "Confirmation" %>
-				<%= f.password_field :password_confirmation %>
-			</li>
+				<%= f.password_field :password_confirmation, class: "form-control" %>
+			</div>
 			
-			<%= f.submit "Sign up" %>
+			<%= f.submit "Sign up", class: "btn btn-primary btn-block" %>
 		<% end %>
-	</ul>
+	</div>
+</div>
